# comp4300

./: .gitignore  CMakeLists.txt  Notes.txt
.github/workflows/: ci.yml
assignment1/: CMakeLists.txt  Makefile  README.txt  config.txt  main.cpp
assignment1_solution/: CMakeLists.txt  circle.cpp  circle.h  config.cpp  config.h  main.cpp  rectangle.cpp  rectangle.h  shape.h
assignment2/: CMakeLists.txt  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  README.txt  Vec2.cpp  Vec2.h  config.txt  main.cpp
assignment2_solution/: CMakeLists.txt  Components.h  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  config.cpp  config.h  main.cpp  temp.cpp  vec2_test.cpp
assignment3/: Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.cpp  Entity.h  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  README.txt  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Play.cpp  Scene_Play.h  main.cpp
assignment3/images/: assets.txt
assignment3_solution/: Action.cpp  Action.h  Animation.cpp  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h
assignment3_solution/assets/: assets.txt  level1.txt
assignment4/: Action.cpp  Action.h  Animation.cpp  CMakeLists.txt  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  GameEngine.h  Physics.cpp  Physics.h  README.txt  Scene.h  Scene_Menu.h  Scene_Zelda.cpp  Scene_Zelda.h  vec2.h
assignment4/config/: assets.txt  level2.txt
assignment4_solution/: Action.h  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.h  EntityManager.h  GameEngine.cpp  Physics.cpp  Physics.h  Scene_Menu.cpp  Scene_Zelda.cpp  Scene_Zelda.h  main.cpp  vec2.cpp  vec2.h
assignment4_solution/config/: level1.txt
notes/: Lecture 01.md  Lecture 02.md  Lecture 03.md  Lecture 04.md  Lecture 05.md  Lecture 06.md  Lecture 07.md  Lecture 08.md  Lecture 09.md  Lecture 13.md  Lecture 14.md  Lecture 15.md  Lecture 16.md  Lecture 18.md  Lecture 19.md  Lecture 20.md  Lecture 21.md  Lecture 22.md  readme.md
